--- a/New/InitializeVistA.html
+++ b/New/InitializeVistA.html
@@ -1896,7 +1896,7 @@ Select Registration Menu <TEST ACCOUNT> Option: <strong>Register a Patient</stro
 <h2 id="next-steps">Next Steps</h2>
 <ul>
 <li><a href="./SetupClinics.html">Set-up Clinics</a></li>
-<li>Set-up MAS Parameters (Part 1 of setting up a hospital)</li>
+<li><a href="./SetMasParameters.html">Set-up MAS Parameters</a> (Part 1 of setting up a hospital)</li>
 <li>Set-up Wards and Beds (Part 2 of setting up a hospital)</li>
 <li>Install a Drug File, or create one from Scratch</li>
 <li>Set-up Outpatient Pharmacy</li>
