Added CPRS ward selection image to SetMarParameters.rst

--- a/New/SetMasParameters.html
+++ b/New/SetMasParameters.html
@@ -16,5 +16,9 @@
 <p>License: <a href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/80x15.png" alt="license" /></a></p>
 <p>Last updated in May 2018.</p>
 <p>If you have reached this point, it means that you have finished <a href="./InitializeVistA.html">VistA Initialization</a>.</p>
+<p>If you go to CPRS right now, you will see this on the patient selection screen if you click on <code>Wards</code> in the <code>Patient Selection</code> area. Our objective in this section and the next section is to set-up a hospital in our VistA system with a couple of wards.</p>
+<figure>
+<img src="images/SetMasParameters/patient_selection_dialog.png" class="align-center" />
+</figure>
 </body>
 </html>
