ASK DEVICE is required for virtual terminal

--- a/New/InitializeVistA.html
+++ b/New/InitializeVistA.html
@@ -415,6 +415,7 @@ SIGN-ON/SYSTEM DEVICE: <strong>Y</strong>  YES
 <li>TYPE = VIRTUAL TERMINAL</li>
 <li>SUBTYPE = C-VT220</li>
 <li>SIGN-ON/SYSTEM DEVICE = YES</li>
+<li>ASK DEVICE = YES</li>
 </ul>
 <h3 id="hfs-device">HFS Device</h3>
 <p>The HFS device is necessary because KIDS (the installation system used by VISTA) uses it to open files on the operating system. (Technically, it only uses the Open Parameters field.) The one that comes in FOIA looks like this:</p>
