Step 1 of MAS parameters

--- a/New/SetMasParameters.html
+++ b/New/SetMasParameters.html
@@ -444,6 +444,34 @@ Select ADT System Definition Menu <TEST ACCOUNT> Option: <strong>MAS Par</strong
     DRUG PROFILE printer : NOT SPECIFIED
     ROUTING SLIP printer : NOT SPECIFIED
 Enter 1-3 to EDIT, or RETURN to QUIT:</code></div>
-<p>To be continued...</p>
+<p>Before editing any of this, we need to talk about all strange abbreviations, starting from the top.</p>
+<ul>
+<li>MAS = I don't know. Synonymous with ADT.</li>
+<li>ADT = Admission/Discharge/Transfer.</li>
+<li>PIMS = Patient Information Management System. Parent of MAS and ADT.</li>
+<li>PTF = Patient Treatment File. Records hospital stays for patients.</li>
+<li>G&amp;L = Gains and Losses of patients in the hospital census.</li>
+<li>HINQ = Hospital Inquiry (explained above)</li>
+<li>10/10 = The paper registration form the VA uses.</li>
+<li>AA = Authorized Absence; a type of Transfer.</li>
+<li>ACTION PROFILE or DRUG PROFILE: A listing of drugs for patients which can be renewed by the physician by writing on it. Designed for hybrid environments where physicians don't order medications online.</li>
+</ul>
+<p>We will set this up with sensible defaults. From the top, starting with #1. As always, remember that if you don't know what a field does, type ? for a short help and ?? for long help.</p>
+<div class="code"><code>Enter 1-3 to EDIT, or RETURN to QUIT:  <strong>1</strong>
+MEDICAL CENTER NAME: <strong>`1</strong>  MAIN CAMPUS     999
+AFFILIATED: <strong>Y</strong>  YES
+MULTIDIVISION MED CENTER?: <strong>N</strong>  NO
+NURSING HOME WARDS?: <strong>N</strong>  NO
+DOMICILIARY WARDS?: <strong>N</strong>  NO
+SYSTEM TIMEOUT: <strong>900</strong>
+AUTOMATIC PTF MESSAGES?: <strong>Y</strong>  YES
+PRINT PTF MESSAGES?: <strong>Y</strong>  YES
+DEFAULT PTF MESSAGE PRINTER: <strong>BROTHER</strong>      OSEHRA     Brother_HL_6180DW_series <i>Use NULL if you don't have a printer set-up</i>
+SHOW STATUS SCREEN: <strong>N</strong>  NO
+USE HIGH INTENSITY ON SCREENS?: <strong>Y</strong>  YES
+Select EXCLUDE WHICH TERMINAL TYPES?:<strong>&lt;enter&gt;</strong>
+CONSISTENCY CHECKER ON?: <strong>N</strong>  NO
+ABBREVIATED PATIENT INQUIRY?: <strong>N</strong> NO</code></div>
+<p>Now you will go back to the same starting screen. Choose #2 this time:</p>
 </body>
 </html>
